--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>TOTAL K-POP Global</title>
     
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" href="icons/icon-512.png">
-    <link rel="apple-touch-icon" href="icons/icon-512.png">
+    <link rel="icon" type="image/png" href="icon-512.png">
+    <link rel="apple-touch-icon" href="icon-512.png">
     <meta name="theme-color" content="#bb86fc">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap" rel="stylesheet" />
@@ -25,7 +25,6 @@
         .brand-name { font-size: 1.5rem; font-weight: 900; letter-spacing: 2px; }
         .brand-name span { color: var(--p); }
 
-        /* BUSCADOR INTEGRADO */
         .search-container { width: 90%; max-width: 500px; margin: 15px auto; position: relative; }
         .search-input { 
             width: 100%; padding: 12px 20px; border-radius: 30px; border: 1px solid #333; 
@@ -33,7 +32,6 @@
         }
         .search-input:focus { border-color: var(--p); box-shadow: 0 0 10px rgba(187, 134, 252, 0.2); }
 
-        /* SISTEMA DE PESTAÑAS */
         .tabs-container {
             display: flex; justify-content: space-around; background: #000;
             position: sticky; top: 0; z-index: 1000; border-bottom: 1px solid #333;
@@ -125,6 +123,9 @@
 
     <section class="legal-box">
         <p id="legal-text"></p>
+        <p style="text-align:center;">
+            <a href="privacy.html" style="color:var(--p); text-decoration:none; font-weight:bold;">Leer Política de Privacidad Completa</a>
+        </p>
     </section>
 </main>
 
@@ -226,3 +227,13 @@
 </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
